@@ -1,0 +1,86 @@
+! X resources for gnuplot x11 terminal driver
+! More information available in the gnuplot documentation
+! From inside gnuplot, try 'help set term x11'
+
+! User interface settings
+  gnuplot*exportselection:  on
+  gnuplot*fastrotate:   on
+  gnuplot*feedback:     on
+  gnuplot*ctrlq:        on
+  gnuplot*persist:      off
+  gnuplot*raise:        off
+  gnuplot*dashed:       off
+
+! Default font
+! gnuplot*font:   verdana,11,bold
+
+! Default line colors
+  gnuplot*background:  white
+  gnuplot*textColor:   black
+  gnuplot*borderColor: black
+  gnuplot*axisColor:   black
+  gnuplot*line1Color:  red
+  gnuplot*line2Color:  green
+  gnuplot*line3Color:  blue
+  gnuplot*line4Color:  magenta
+  gnuplot*line5Color:  cyan
+  gnuplot*line6Color:  sienna
+  gnuplot*line7Color:  orange
+  gnuplot*line8Color:  coral
+
+! Default line widths
+  gnuplot*axisWidth:   0
+  gnuplot*borderWidth: 2
+  gnuplot*line1Width:  1
+  gnuplot*line2Width:  1
+  gnuplot*line3Width:  1
+  gnuplot*line4Width:  1
+  gnuplot*line5Width:  1
+  gnuplot*line6Width:  1
+  gnuplot*line7Width:  1
+  gnuplot*line8Width:  1
+
+! Default point size
+  gnuplot*pointsize:   1
+
+! Default dash patterns for monochrome Displays
+! 0 means a solid line.
+! A two-digit number `jk` means a dashed line with a repeated pattern of 
+! `j` pixels on followed by `k` pixels off.  For example, '16' is a dotted
+! line with one pixel on followed by six pixels off.
+! More elaborate on/off patterns can be specified with a four-digit value.
+! The default values shown below are for monochrome displays
+! or monochrome rendering on color or grayscale displays.  For color displays,
+! the default for each is 0 (solid line) except for `axisDashes`
+  gnuplot*borderDashes:   0
+  gnuplot*axisDashes:    16
+  gnuplot*line1Dashes:    0
+  gnuplot*line2Dashes:   42
+  gnuplot*line3Dashes:   13
+  gnuplot*line4Dashes:   44
+  gnuplot*line5Dashes:   15
+  gnuplot*line6Dashes: 4441
+  gnuplot*line7Dashes:   42
+  gnuplot*line8Dashes:   13
+
+! Colormap usage and preferred visual Display class
+! gnuplot*maxcolors:  <integer>
+! gnuplot*mincolors:  <integer>
+! gnuplot*visual:     <visual name>
+  gnuplot*mono:         off
+  gnuplot*gray:         off
+  gnuplot*reverseVideo: off
+
+! Grayscale setting (only checked if program is invoked as gnuplot -gray)
+  gnuplot*textGray:   black
+  gnuplot*borderGray: gray50
+  gnuplot*axisGray:   gray50
+  gnuplot*line1Gray:  gray100
+  gnuplot*line2Gray:  gray60
+  gnuplot*line3Gray:  gray80
+  gnuplot*line4Gray:  gray40
+  gnuplot*line5Gray:  gray90
+  gnuplot*line6Gray:  gray50
+  gnuplot*line7Gray:  gray70
+  gnuplot*line8Gray:  gray30
+
